# adult-mlops-project

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  verify.py
.dvc/: config
artifacts/: cat.joblib  evaluation_metrics.example.json  evaluation_metrics.json  metrics.json  num.joblib  preprocessor.joblib  preprocessor_meta.joblib  report.html
data/processed/: validation_report.json
data/raw/: features.parquet  targets.parquet
notebooks/: 01_eda.ipynb  02_modeling.ipynb
scripts/: check_overfitting.py
src/: __init__.py  evaluate.py  features.py  ingest.py  pipeline.py  train.py  validate.py
tests/: __init__.py  test_features.py  test_pipeline.py  test_schema.py  test_smoke.py
