[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adult-mlops"
version = "0.1.0"
description = "MLOps pipeline for Adult Income prediction (UCI ML Repository)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Universidad Santo Tomas", email = "estadistica@usantotomas.edu.co"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Versiones fijas para garantizar reproducibilidad del pipeline
dependencies = [
    "pandas==2.1.4",
    "numpy==1.26.3",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "pyarrow==14.0.2",
    "pandera==0.17.2",
    "mlflow==2.9.2",
    "ucimlrepo==0.0.7",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "dvc==3.36.1",
    "dvc-s3==3.1.0",
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
]

[project.urls]
Homepage = "https://github.com/usantotomas/adult-mlops"
Repository = "https://github.com/usantotomas/adult-mlops.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
